[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neui"
version = "0.1.0"
description = "A modern, GPU-accelerated Python UI framework."
readme = "README.md"
authors = [
  { name = "NEUI Team", email = "user@example.com" },
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "glfw",
    "skia-python",
]
requires-python = ">=3.7"

[project.urls]
"Homepage" = "https://github.com/example/neui"
"Bug Tracker" = "https://github.com/example/neui/issues"
